syntax = "proto3";

package pb;

import "book.proto";

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message UpdateBookRequest {
    string book_id = 1;
    string title = 2;
    string description = 3;
    string year  = 4;
    string author_id = 5;
    string publisher_id = 6;
}

message UpdateBookResponse {
    Book book = 1;
}
